--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usepackage{float}
 \usepackage{tabularx}
 \usepackage[table]{xcolor}
-\usepacakge{array}
+\usepackage{array}
 \setmonofont{Cascadia Code}
 
 \newfontfamily\ccbold{Cascadia Code Bold}
