progress(ch1): 1.1 and 1.2

--- a/sections/1/applications_of_hexadecimal.tex
+++ b/sections/1/applications_of_hexadecimal.tex
@@ -6,33 +6,31 @@
 There are several applications of the Hexadecimal number system in Computers, which include and are not limited to:
 
 \begin{itemize}
-
-\item Making binary easier to write/represent
-
-\item OS error codes
-
-\item MAC addresses
-
-\item IPv6 addresses
-
-\item Color codes
-
+    \item Making binary easier to write/represent
+    \item OS error codes
+    \item MAC addresses
+    \item IPv6 addresses
+    \item Color codes
 \end{itemize}
 
 \paragraph{Making binary easier to write/represent}
 
-Given long binary sequences, such as {\ccmono 1011101010111110}Programmers may find it much easier to simply express the given example as {\ccmono BABE}, which is 4 characters and not 16 when typing/writing. Converting between the two formats was covered in \hyperref[sec:1-converting-between-bin-den-and-hexadecimal]{this section}.
+Given long binary sequences, such as {\ccmono 1011101010111110}, programmers may find it much easier to simply express the given example as {\ccmono BABE}, which is 4 characters and not 16 when typing/writing. Converting between the two formats was covered in \hyperref[sec:1-converting-between-bin-den-and-hexadecimal]{this section}.
 
 \paragraph{OS error codes}
-stub
+
+OS error codes are given when a program has an error and must exit. Sometimes, they are represented in hex.
 
 \paragraph{MAC addresses}
-stub
+
+These uniquely identifies a device on the network. They use 48 bits of data in total (6 segments of 2 nibbles), and look like {\ccmono AA:BB:CC:DD:EE:FF}. Refer to section \ref{2:sec:ip_and_mac_addresses} for details.
 
 \paragraph{IPv6 addresses}
-stub
+
+Refer to \ref{2:sec:ip_and_mac_addresses} for details.
 
 \paragraph{Color codes}
-stub
+
+Color codes are used to represent colors on a computer. They describe the amount that specific colors mix together. Red, Green and Blue are used as the base colors, as they are the additive color primary colors (not yellow!) like {\ccmono \#ffcc00}. 2 nibbles or one byte is used to represent the magnitude of the color itself, from 00-ff. The previous example consists of $FF$ red, $CC$ green and $00$ blue, which produces a yellow color.
 
 \end{document}
