--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,8 @@
 \newfontfamily\ccitalic{Cascadia Code Italic}
 \newfontfamily\ccmono{Cascadia Code} % For monospace
 
+\definecolor{lightlightgray}{rgb}{0.95, 0.95, 0.95}
+
 \usepackage{cellspace}
 \setlength\cellspacetoplimit{10pt} % Minimum space above cell content
 \setlength\cellspacebottomlimit{10pt} % Minimum space below cell content
