progress(ch5): the internet and the www

--- a/main.tex
+++ b/main.tex
@@ -75,11 +75,26 @@
     tabsize=4
 }
 
+\definecolor{red}{HTML}{d61111}
+\definecolor{blue}{HTML}{206ac9}
+\definecolor{green}{HTML}{22b625}
+\definecolor{yellow}{HTML}{ffb206}
+\definecolor{linkblue}{mix}{80,blue,white}
+
+\hypersetup{
+    colorlinks=true,
+    linkcolor=linkblue,
+    citecolor=linkblue,
+    filecolor=linkblue,
+    urlcolor=linkblue
+}
+
 % info
-\title{The IGCSE Computer Science Revision Guide}
-\author{Eason Qin (eason@ezntek.com)}
+\title{The IGCSE Computer Science (Theory) Revision Guide}
+\author{Eason Qin (eason@ezntek.com), et al.}
 \date{February 2025}
 
+% da benin..beningi...benigi..da biningin™ 
 \begin{document}
 
 % Title Page
